--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  filter: brightness(0.6);
 }
 
 .infos {
@@ -258,13 +259,13 @@ body {
   padding: 24px;
 }
 
-.blog{
+.blog {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.blog .image{
+.blog .image {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -301,8 +302,113 @@ body {
   color: #0f0f0f;
 }
 
+.stats {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 24px;
+}
+
+.stats > div {
+  border-radius: 30px;
+  text-align: center;
+  flex: 1;
+  padding: 42px 30px 42px 30px;
+}
+
+.stats .value {
+  color: #ffffff;
+  font-size: 34px;
+  margin-bottom: 17px;
+  line-height: 1.2;
+  letter-spacing: -1px;
+  font-weight: 600;
+}
+
+.stats p {
+  font-size: 12px;
+  color: #bcbcbc;
+  opacity: 0.5;
+  margin: 0;
+  text-transform: uppercase;
+}
+
 .stats,
 .collab {
   grid-column: span 2;
-  height: 190px;
+  /* height: 190px; */
+}
+
+.collab h1 {
+  font-size: 44px;
+  line-height: 52px;
+  font-weight: 500;
+  color: #fff;
+  margin: 0;
+  margin-top: 10px;
+}
+
+.collab > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.collab > div > h1 > span {
+  color: #5b78f6;
+}
+
+.footer-area {
+  padding-top: 128px;
+  padding-bottom: 78px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-menu {
+  margin: 33px 0 37px 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 44px;
+  flex-wrap: wrap;
+  list-style-type: none;
+}
+
+.footer-menu a {
+  text-decoration: none;
+  color: #676767;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 0.1px;
+  font-weight: 600;
+  transition: 0.3s;
+}
+
+.copyright {
+  margin: 0;
+  color: #727272;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+/* .flow__text{
+  position: relative;
+} */
+
+.flow__text p {
+  padding: 0px 10px;
+  animation: flow 5s linear infinite;
+}
+
+@keyframes flow {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-65.3%);
+  }
 }
